...
          Looking up address, please wait…
        </Text>
      )}

      <ScrollView style={styles.content} keyboardShouldPersistTaps="handled">
        <TextInput
          testID="entry-content-input"
          accessibilityLabel="Journal entry content"
          label="What's on your mind?"
          value={state.content}
          onChangeText={updateContent}
          multiline
          numberOfLines={10}
...
